# novel-creator

./: .gitignore
db/: package.json  pnpm-lock.yaml  tsconfig.json
db/src/: datasource.ts  sync.ts
front/: package-lock.json  package.json  tsconfig.json
front/app/: config.tsx  layout.tsx  page.tsx
front/pages/: _app.tsx  config.tsx  index.tsx
mantine/: .eslintrc.cjs  package-lock.json  package.json
mantine/pages/: _app.tsx
novel-creator-react/: .prettierrc  package-lock.json  package.json
novel-creator-react/src/: App.tsx  Character.tsx  CreateNovel.tsx  Home.tsx  Sidebar.tsx  Story.tsx  TextAnimation.css  index.tsx
novel_creator_front/: README.md  pubspec.yaml
novel_creator_front/integration_test/: simple_test.dart
novel_creator_front/lib/: fonts.dart  main.dart  write_novel.dart
novel_creator_front/linux/: CMakeLists.txt  my_application.cc
novel_creator_front/rust/: Cargo.toml
novel_creator_front/test/: widget_test.dart
novel_creator_front/web/: index.html  manifest.json
novel_creator_front/windows/: CMakeLists.txt
server/: Cargo.toml
server/src/: config.rs  lib.rs  main.rs
server/src/context/: config.rs  db.rs  mod.rs
server/src/dto/: mod.rs  novel.rs  user.rs
server/src/handlers/: novel.rs  user.rs
server/src/model/: mod.rs  novel.rs  user.rs
server/src/repository/: mod.rs  novel.rs  user.rs
server/src/services/: novel.rs
server/src/utils/: error.rs  mod.rs
solidity/: .gitignore  .prettierrc.json  hardhat.config.ts  package-lock.json  package.json
solidity/contracts/: INovelCreator.sol  NovelCreator.sol
(+37 files in other folders)
